--- a/1 Paskaita/index.html
+++ b/1 Paskaita/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Main heading</h1>
+    <h1>Main heading1</h1>
         <p>Lorem ipsum, dolor sit amet <b>consectetur adipisicing</b> elit. Illum omnis vel, officiis quia voluptates nostrum, repellat voluptatum dignissimos aspernatur accusamus corporis? Cum delectus numquam dolorem, facere laborum omnis quis quidem?</p>
         <h2>Sub1 heading</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero repudiandae sunt nam nobis nostrum cumque eum obcaecati. Quia beatae facilis unde sed quod eius saepe, molestias quisquam eveniet obcaecati repellendus?</p>
